src/components/Header.module.css
.header {
  position: fixed;
  width: calc(100% - 20px);
  background-color: var(--archive-black);
  border-bottom: 0.5px solid var(--archive-light-gray);
  top: 0px;
  padding: 10px;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;
}

.header__image {
  width: 25px;
}

.header__title {
  color: var(--archive-white);
  opacity: 0.9;
  text-decoration: none;
  font-weight: 600;
  transition: color 0.3s;
  flex-grow: 1;
  flex-shrink: 0;
  flex-basis: 0;
}

.header__title:hover {
  color: var(--archive-light-blue);
}

.header__button {
  font-size: 12px;
  color: var(--archive-blue);
  border-color: var(--archive-blue);
}

.header__button:hover {
  background-color: var(--archive-blue);
  color: var(--archive-white);
}

